# toilet-timer

./: .gitignore  API_GUIDE.md  CMakeLists.txt  README.md  sdkconfig  sdkconfig.default  sdkconfig.defaults  sdkconfig.old
local_ota_server/: key.pem
main/: CMakeLists.txt  Kconfig.projbuild  config.h  display.c  epd_driver.c  epd_driver.h  font.c  font.h  global_constants.h  global_event_group.h  graphics.c  graphics.h  main.c
main/battery_level/: battery_level.c  battery_level.h
main/deep_sleep/: deep_sleep.c  deep_sleep.h
main/display_epaper/: README.md  display.c  display.h  graphics.c  utf8.c  utf8.h
main/display_epaper/driver/: epd_driver_gdew0102t4.c  epd_driver_gdew0102t4.h
main/display_epaper/fonts/: font_9x15.c  font_9x15.h
main/nvs_utils/: nvs_utils.c  nvs_utils.h
main/ota_update/: cert.pem  ota_update.c
main/show_messages/: show_messages.c  show_messages.h
main/sntp/: sntp.c  sntp.h
main/system_state/: system_state.c
main/time_utils/: time_utils.c  time_utils.h
main/trigger/: trigger.c  trigger.h
main/wifi/: wifi.c  wifi.h
set_manual_timestamp/: set_timestamp.py
